# WireMapping

./: .gitignore  README.md  panel_wiring_app_plan.md  panel_wiring_design_rationale.md
backend/: .env.example  pyproject.toml
backend/src/app/: config.py  dependencies.py  main.py
backend/src/app/routers/: export.py
backend/src/app/services/: csv_export.py  pdf_export.py
docs/: architecture.md  testing-guide.md
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AppLayout.tsx  ConfirmDialog.tsx  EmptyState.tsx  FormField.tsx  PwaUpdatePrompt.tsx  SelectWithCustom.tsx  SyncStatusIndicator.tsx
frontend/src/features/auth/: AuthContext.tsx  AuthGuard.tsx  LoginPage.tsx  SignUpPage.tsx
frontend/src/features/cables/: CableCreateModal.tsx  CableEditModal.tsx  CableListSection.tsx
frontend/src/features/elements/: ElementCreateModal.tsx  ElementDetailPage.tsx  ElementEditModal.tsx  ElementListSection.tsx
frontend/src/features/export/: ExportPanel.tsx
frontend/src/features/machines/: MachineEditModal.tsx  MachineForm.tsx
frontend/src/features/projects/: ProjectCreatePage.tsx  ProjectDetailPage.tsx  ProjectEditModal.tsx  ProjectListPage.tsx
frontend/src/features/terminals/: TerminalBulkGenerateModal.tsx  TerminalCreateModal.tsx  TerminalEditModal.tsx  TerminalListSection.tsx  autofillPairs.ts
frontend/src/hooks/: useEntityCRUD.ts  useSyncStatus.ts
frontend/src/lib/: db.ts  supabase.ts  sync.ts  types.ts
supabase/migrations/: 00001_initial_schema.sql
(+5 files in other folders)
