[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Claude", email = "noreply@anthropic.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.26",
    "supabase>=2.28.3",
    "uvicorn[standard]>=0.44.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
